Fix too large font on Firefox/Linux

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -139,7 +139,7 @@ html {
     left: 2px;
     width: 316px;
     background: rgba(0, 0, 0, 0.5);
-    font: bold 20px/40px sans-serif;
+    font: bold 18px/36px sans-serif;
 
     .score {
       position: absolute;
